--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 }
 
 configurations {
-  runtime.exclude group: "[1.7.10]TerraFirmaCraft-0.79.21.741"
+  runtime.exclude group: "[1.7.10]terrafirmacraftplus-0.80.15"
 }
 
 // define the properties file
@@ -77,14 +77,14 @@ sourceSets {
  }
 
 
-task copyJar(type: Copy) {
-     from('build/libs') {
-		include '**/*.jar'
-	 }
-     into 'C:/Users/Aleksey/AppData/Roaming/.minecraft_tfc/mods'
- }
+//task copyJar(type: Copy) {
+//     from('build/libs') {
+//		include '**/*.jar'
+//	 }
+//     into 'C:/Users/Aleksey/AppData/Roaming/.minecraft_tfc/mods'
+// }
 
-tasks.build.dependsOn('copyJar')
+//tasks.build.dependsOn('copyJar')
 
 dependencies {
     // Copy "[1.7.10]TerraFirmaCraft-0.79.21.741.jar" file
